Added color, detecting pellets and update score

--- a/PacManProject/TestGLProj/TestGLProj.vcxproj
+++ b/PacManProject/TestGLProj/TestGLProj.vcxproj
@@ -94,9 +94,12 @@
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\blue.frag" />
+    <None Include="shaders\red.frag" />
     <None Include="shaders\green.frag" />
     <None Include="shaders\phong.frag" />
     <None Include="shaders\phong.vert" />
+    <None Include="shaders\yellow.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
